--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
-show_downloads: true
+title: ECS Ships Project
+description: Demo running +3K entities using ECS in Unity.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
